# aichat-pro

./: .gitignore  LICENSE  README.md  README_zh.md  RETROUI_REDESIGN_SUMMARY.md  convert-logo.sh  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.claude/: settings.local.json
src/: App.jsx  index.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  credentials.rs  db.rs  lib.rs  main.rs
src/components/: ComponentTest.jsx  ErrorBoundary.jsx  FavoriteButton.jsx  Layout.jsx  Message.jsx  RetroUITest.jsx  TypeWriter.jsx
src/components/__tests__/: FavoriteButton.test.md
src/components/retroui/: Button.tsx  Card.tsx  Input.tsx  Select.tsx
src/components/ui/: ErrorStates.jsx  LoadingSpinner.jsx  RetroSelect.jsx  index.ts
src/i18n/: index.jsx
src/pages/: AboutPage.jsx  AssistantsPage.jsx  ChatPage.jsx  ProvidersPage.jsx  SettingsPage.jsx
src/styles/: retro-optimizations.css
